[package]
name = "simple_db_nn"
version = "0.1.0"
edition = "2024"
authors = ["Carlos B. <carlos.baezruiz@gmail.com>"]
license = "MIT OR Apache-2.0" # Usa una licencia válida
description = "Very stupid and simple db with nearest neighbors algorithms to use with embeddings"
readme = "README.md"
repository = "https://github.com/carlosb1/simple-db-nn"
keywords = ["embedding", "llm", "db"]

[dependencies]
arroy = "0.5.0"
heed = "0.20.5"
fastembed = "4.3"
rand = "0.8.5"
byteorder = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
rayon = "1.10.0"
serde_json = "1.0.141"
